--- a/my_screen.css
+++ b/my_screen.css
@@ -21,6 +21,27 @@ background: -ms-linear-gradient(top, #2F2727, #1a82f7);
 /* Opera 11.10+ */
 background: -o-linear-gradient(top, #2F2727, #1a82f7);
 }
+
+.imagesPopping>img {
+    margin-left: 20px;
+    width: 150px;
+    height: 100px;
+    box-shadow: .5px .7px 0.8px black;
+    transition: 400ms ease-in-out;
+}
+.imagesPopping>img:hover {
+    cursor: pointer;
+    transform: scale(1.5);
+}
+.imagesPopping {
+  margin: 0;
+  padding: 0;
+  display:grid;
+  align-items: center;
+  justify-content: center;
+  height: 10%;
+  width: 20%;
+}
 .searchForm {
   display:inline-flex;
   justify-content:center;
@@ -32,7 +53,7 @@ background: -o-linear-gradient(top, #2F2727, #1a82f7);
   border-radius: 0.1em;
 }
 
-/*.searchForm>table {
+.searchForm>table {
     position: relative;
     margin: 40px 0;
 }
@@ -64,7 +85,7 @@ searchForm>table tr td select, .addingData>table tr td select {
     transform: scale(1.1);
 }
 
-.navBar {
+/*.navBar {
     margin: 0;
     padding: 0;
     position: static;
@@ -74,7 +95,7 @@ searchForm>table tr td select, .addingData>table tr td select {
     display: flex;
     align-items: center;
     justify-content: center;
-}
+}*/
 
 h1 {
     text-align: center;
@@ -132,4 +153,4 @@ h3 {
     justify-content: center;
     width: 100%;
     height: 360px;
-}*/
+}
