--- a/my_screen.css
+++ b/my_screen.css
@@ -1,23 +1,10 @@
 body{
-  background : radial-gradient(white, black) no-repeat;
-  height : 100%;
-  /* fallback */
-background-color: #1a82f7;
-background: url(images/linear_bg_2.png);
-background-repeat: repeat-x;
-
-/* Safari 4-5, Chrome 1-9 */
-background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#1a82f7), to(#2F2727));
-
-/* Safari 5.1, Chrome 10+ */
-background: -webkit-linear-gradient(top, #2F2727, #1a82f7);
-
-/* Firefox 3.6+ */
-background: -moz-linear-gradient(top, #2F2727, #1a82f7);
-
-/* IE 10 */
-background: -ms-linear-gradient(top, #2F2727, #1a82f7);
-
-/* Opera 11.10+ */
-background: -o-linear-gradient(top, #2F2727, #1a82f7);
+  background: skyblue; /* For browsers that do not support gradients */
+      background: -webkit-linear-gradient(silver, skyblue, grey); /* For Safari 5.1 to 6.0 */
+      background: -o-linear-gradient(silver,skyblue, grey); /* For Opera 11.1 to 12.0 */
+      background: -moz-linear-gradient(silver, skyblue, grey); /* For Firefox 3.6 to 15 */
+      background: linear-gradient(silver,skyblue, grey); /* Standard syntax */
+}
+table, th ,td {
+  border: 1px dotted black;
 }
