--- a/my_screen.css
+++ b/my_screen.css
@@ -8,3 +8,160 @@ body{
 table, th ,td {
   border: 1px dotted black;
 }
+.modal {
+    width: 100%;
+    height: 70px;
+    position: relative;
+    background-size: cover;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    color: #132020;
+    font-size: 20px;
+    text-shadow: 1px 1px 1px black;
+    transition: 1s ease-in-out;
+}
+/*.active {
+    animation: slideIn 1s ease-in-out 1;
+    animation-fill-mode: forwards;
+    opacity: 0;
+}
+
+
+
+@keyframes growUp {
+    0% {
+        opacity: 0;
+        -webkit-transform: scale(0.5);
+    }
+    100% {
+        opacity: 1;
+        -webkit-transform: scale(1);
+    }
+}
+@keyframes slideIn {
+    0% {
+        opacity: 0;
+        -webkit-transform: translateX(200px);
+    }
+    100% {
+        opacity: 1;
+        -webkit-transform: translateX(0px);
+    }
+}
+@keyframes clipMe {
+    0% {
+        opacity: 0;
+        transform: rotate3d(0, 1, 0, 180deg);
+    }
+    50% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 1;
+        transform: rotate3d(0, 1, 0, 0deg);
+    }
+}
+.container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 200%;
+    width: 100%;
+    display: none;
+    background-color: lightblue;
+}
+
+.activeModal {
+    display: flex;
+    animation: modalAnim 300ms ease-in-out forwards;
+}
+
+@keyframes modalAnim {
+    0%, 50% {
+        background-color: rgba(0, 0, 0, 0);
+    }
+    100% {
+        background-color: rgba(0, 0, 0, 0.9);
+    }
+}
+
+.inactiveModal {
+    display: flex;
+    animation: inactiveModalAnim 3s ease-in-out forwards;
+}
+
+@keyframes inactiveModalAnim {
+    0% {
+        background-color: rgba(0, 0, 0, 9)
+    }
+    100% {
+        background-color: rgba(0, 0, 0, 0.0);
+        transform: translateY(-200%)
+    }
+}
+.formActive {
+    animation: formAnim 1s ease-in-out forwards;
+    animation-delay: 500ms;
+}
+
+@keyframes formAnim {
+    0%, 15% {
+        transform: translateX(-200%) rotate(90deg);
+    }
+    85%, 100% {
+        transform: translateX(0%)
+    }
+}
+
+.inactiveForm {
+    animation: inactiveFormAnim 500ms ease-in-out forwards;
+}
+.close {
+    position: absolute;
+    margin: -180px 259px;
+    font-size: 12px;
+    text-decoration: none;
+    cursor: pointer;
+    color: #fff;
+    font-family: sans-serif;
+    font-weight: 700;
+    transform: scale(1);
+    transition: 300ms ease-in-out;
+}
+
+.addingData {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 500px;
+    height: 350px;
+    margin: -350px 0;
+    box-shadow: 0px 23px 30px -20px rgba(0, 0, 0, 0.4);
+    border-radius: 0.1em;
+    position: absolute;
+    transition: 1s ease-in-out;
+    background-color: #fff;
+    transform: translate(-200%);
+}
+
+
+@keyframes flipOut {
+    0%, 60% {
+        transform: translateX(-100%)
+    }
+    80% {
+        transform: translateX(0%) scale(1.5);
+        opacity: 1;
+    }
+    100% {
+        transform: translateX(0%) scale(1);
+        opacity: 1;
+    }
+}*/
