--- a/my_screen.css
+++ b/my_screen.css
@@ -8,7 +8,7 @@ body{
 table, th ,td {
   border: 1px dotted black;
 }
-.modal {
+/*.modal {
     width: 100%;
     height: 70px;
     position: relative;
@@ -20,7 +20,7 @@ table, th ,td {
     font-size: 20px;
     text-shadow: 1px 1px 1px black;
     transition: 1s ease-in-out;
-}
+}*/
 /*.active {
     animation: slideIn 1s ease-in-out 1;
     animation-fill-mode: forwards;
