--- a/my_screen.css
+++ b/my_screen.css
@@ -7,13 +7,18 @@ body, html {
       background: -moz-linear-gradient(silver, skyblue, grey); /* For Firefox 3.6 to 15 */
       background: linear-gradient(silver,skyblue, grey); /* Standard syntax */
 }
+.container {
+  align-items: center;
+  align-content: center;
+
+}
 table, th ,td {
   border: 1px dotted black;
 }
 #logsBtn {
   align-content: center;
     position: center;
-    margin: 0px -40px;
+    margin: 0px 0px;
     background-color: #4BABBD;
 	color: #fff;
 	width: 150px;
@@ -31,12 +36,12 @@ table, th ,td {
 
   background-color: #39698B;
   color: #fff000;
-  width: 70px;
+  width: 90px;
   border: 3px double-dotted #39698B;
   cursor: pointer;
-  -webkit-transition: 300ms ease-in-out;
-   -moz-transition: 300ms ease-in-out;
-   transition: 300ms ease-in-out;
+  -webkit-transition: 150ms ease-in-out;
+   -moz-transition: 150ms ease-in-out;
+   transition: 150ms ease-in-out;
 }
 #newsBtn {
     position: absolute;
@@ -74,7 +79,7 @@ table, th ,td {
 
   }
 
-  #newsBtn2 {
+  #resultBtn {
       position: absolute;
       margin: 0px -40px;
       background-color: #4BABBD;
@@ -90,7 +95,7 @@ table, th ,td {
       -moz-transition: 300ms ease-in-out;
       transition: 300ms ease-in-out;
   }
-  #newsBtn2:hover {
+  #resultBtn:hover {
     background-color: #39698B;
     color: #fff000;
     width: 70px;
@@ -103,9 +108,43 @@ table, th ,td {
   h3 {
     text-align: center;
   }
+  h2 {
+    text-align: center;
+  }
   p {
     text-align:center;
   }
+div.class.field {
+  align-content: center;
+}
+#GoBtn {
+  align-content: center;
+    position: center;
+    margin: 0px 0px;
+    background-color: #4BABBD;
+	color: #fff;
+	width: 150px;
+	height: 30px;
+    border: 1px solid #4BABBD;
+    cursor: pointer;
+    -webkit-box-shadow: 1px 1px 1px 1px grey;
+    -moz-box-shadow: 1px 1px 1px 1px grey;
+    box-shadow: 1px 1px 1px 1px grey;
+    -webkit-transition: 300ms ease-in-out;
+    -moz-transition: 300ms ease-in-out;
+    transition: 300ms ease-in-out;
+}
+#GoBtn:hover {
+
+  background-color: #39698B;
+  color: #fff000;
+  width: 90px;
+  border: 3px double-dotted #39698B;
+  cursor: pointer;
+  -webkit-transition: 150ms ease-in-out;
+   -moz-transition: 150ms ease-in-out;
+   transition: 150ms ease-in-out;
+}
 
 /*.searchResults {
 	justify-content: center;
