--- a/my_screen.css
+++ b/my_screen.css
@@ -74,7 +74,7 @@ table, th ,td {
 	align-items: center;
 	justify-content: center;
 	width: 100%;
-	height: 200px;
+	height: 270px;
   background-color: #808080;
 
   }
@@ -123,8 +123,8 @@ div.class.field {
     margin: 0px 0px;
     background-color: #4BABBD;
 	color: #fff;
-	width: 150px;
-	height: 30px;
+	width: 50px;
+	height: 25px;
     border: 1px solid #4BABBD;
     cursor: pointer;
     -webkit-box-shadow: 1px 1px 1px 1px grey;
@@ -145,6 +145,86 @@ div.class.field {
    -moz-transition: 150ms ease-in-out;
    transition: 150ms ease-in-out;
 }
+#newsBtn2 {
+    position: absolute;
+    margin: 0px -40px;
+    background-color: #4BABBD;
+  color: #fff;
+  width: 150px;
+  height: 30px;
+    border: 1px solid #4BABBD;
+    cursor: pointer;
+    -webkit-box-shadow: 1px 1px 1px 1px grey;
+    -moz-box-shadow: 1px 1px 1px 1px grey;
+    box-shadow: 1px 1px 1px 1px grey;
+    -webkit-transition: 300ms ease-in-out;
+    -moz-transition: 300ms ease-in-out;
+    transition: 300ms ease-in-out;
+}
+#newsBtn2:hover {
+  background-color: #39698B;
+  color: #fff000;
+  width: 70px;
+  border: 3px double-dotted #39698B;
+  cursor: pointer;
+  -webkit-transition: 150ms ease-in-out;
+   -moz-transition: 150ms ease-in-out;
+   transition: 150ms ease-in-out;
+}
+#logsBtn2 {
+    position: absolute;
+    margin: 0px -40px;
+    background-color: #4BABBD;
+  color: #fff;
+  width: 150px;
+  height: 30px;
+    border: 1px solid #4BABBD;
+    cursor: pointer;
+    -webkit-box-shadow: 1px 1px 1px 1px grey;
+    -moz-box-shadow: 1px 1px 1px 1px grey;
+    box-shadow: 1px 1px 1px 1px grey;
+    -webkit-transition: 300ms ease-in-out;
+    -moz-transition: 300ms ease-in-out;
+    transition: 300ms ease-in-out;
+}
+#logsBtn2:hover {
+  background-color: #39698B;
+  color: #fff000;
+  width: 70px;
+  border: 3px double-dotted #39698B;
+  cursor: pointer;
+  -webkit-transition: 150ms ease-in-out;
+   -moz-transition: 150ms ease-in-out;
+   transition: 150ms ease-in-out;
+}
+#resultBtn2 {
+    position: absolute;
+    margin: 0px -40px;
+    background-color: #4BABBD;
+  color: #fff;
+  width: 150px;
+  height: 30px;
+    border: 1px solid #4BABBD;
+    cursor: pointer;
+    -webkit-box-shadow: 1px 1px 1px 1px grey;
+    -moz-box-shadow: 1px 1px 1px 1px grey;
+    box-shadow: 1px 1px 1px 1px grey;
+    -webkit-transition: 300ms ease-in-out;
+    -moz-transition: 300ms ease-in-out;
+    transition: 300ms ease-in-out;
+}
+#resultBtn2:hover {
+  background-color: #39698B;
+  color: #fff000;
+  width: 70px;
+  border: 3px double-dotted #39698B;
+  cursor: pointer;
+  -webkit-transition: 150ms ease-in-out;
+   -moz-transition: 150ms ease-in-out;
+   transition: 150ms ease-in-out;
+}
+
+
 
 /*.searchResults {
 	justify-content: center;
